[gd_scene load_steps=15 format=3 uid="uid://bkh0owqbp2fr5"]

[ext_resource type="Script" path="res://UI/PlayerUI.gd" id="1_sces8"]
[ext_resource type="PackedScene" uid="uid://c12t58swnqtmq" path="res://UI/InventorySlot.tscn" id="2_bk3k2"]
[ext_resource type="Texture2D" uid="uid://ni8d6flc27bi" path="res://Art/weapon_pole.png" id="3_w4asg"]
[ext_resource type="Script" path="res://UI/InventoryItem.gd" id="4_pbsa0"]
[ext_resource type="Texture2D" uid="uid://dtp1jhlr186v5" path="res://Art/weapon_bow_arrow.png" id="5_o2go2"]
[ext_resource type="Texture2D" uid="uid://cfkqoerhmegg4" path="res://Art/weapon_longsword.png" id="6_vf72n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ukf6p"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ub7f"]
bg_color = Color(0.6, 0.0235294, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gmplh"]
font_size = 28
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ihe0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pq6g3"]
bg_color = Color(0.0705882, 0.6, 0, 1)

[sub_resource type="Resource" id="Resource_k1pb5"]
script = ExtResource("4_pbsa0")
ItemTexture = ExtResource("3_w4asg")
ItemToGive = "res://Weapons/spear.tscn"

[sub_resource type="Resource" id="Resource_3fl02"]
script = ExtResource("4_pbsa0")
ItemTexture = ExtResource("5_o2go2")
ItemToGive = "res://Weapons/Bow.tscn"

[sub_resource type="Resource" id="Resource_ree5b"]
script = ExtResource("4_pbsa0")
ItemTexture = ExtResource("6_vf72n")
ItemToGive = "res://Weapons/Sword.tscn"

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_sces8")

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(1000, 10)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -27.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_ukf6p")
theme_override_styles/fill = SubResource("StyleBoxFlat_5ub7f")
value = 50.0
show_percentage = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.58
anchor_right = 0.674
anchor_bottom = 0.679
offset_left = 176.384
offset_top = 8.15997
offset_right = -176.448
offset_bottom = -1.992
grow_horizontal = 2
grow_vertical = 2

[node name="InteractText" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "potato"
label_settings = SubResource("LabelSettings_gmplh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0ihe0")
theme_override_styles/fill = SubResource("StyleBoxFlat_pq6g3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -72.0
offset_right = 24.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="InventorySlot" parent="HBoxContainer" instance=ExtResource("2_bk3k2")]
layout_mode = 2
Item = SubResource("Resource_k1pb5")

[node name="InventorySlot2" parent="HBoxContainer" instance=ExtResource("2_bk3k2")]
layout_mode = 2
Item = SubResource("Resource_3fl02")

[node name="InventorySlot3" parent="HBoxContainer" instance=ExtResource("2_bk3k2")]
layout_mode = 2
Item = SubResource("Resource_ree5b")

[node name="InventorySlot4" parent="HBoxContainer" instance=ExtResource("2_bk3k2")]
layout_mode = 2
